engine/codex-rs/tui/src/snapshots/codex_tui__app__tests__patch_approval_tests__patch_approval_pager_top.snap
---
source: tui/src/app/tests/patch_approval_tests.rs
assertion_line: 184
expression: "format!(\"{first:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 11 },
    content: [
        "/ P A T C H / / / / / / / / / / / / / / / / / / ",
        "a-added.txt (+2 -0)                             ",
        "                                                ",
        "  1 +alpha                                      ",
        "  2 +beta                                       ",
        "                                                ",
        "m-updated.txt (+1 -1)                           ",
        "─────────────────────────────────────────── 0% ─",
        " ↑/↓ to scroll · pgup/pgdn to page · home/end to",
        " q close                                        ",
        "                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 3, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 45, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 8, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
